Fix icon alignment

--- a/less/forum/extension.less
+++ b/less/forum/extension.less
@@ -65,10 +65,6 @@
 	    					font-weight: normal;
 					      }
 
-					      &.hasIcon {
-					        padding-left: 40px;
-					      }
-
 					      .Button-icon {
 					        float: left;
 				            margin-left: -30px;
